snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/maven-metadata.xml.sha512
6a153f3a65c77d3a15e1115b6e7e23db430f1e47af15e2668bd37b14315672a4b90c8b16d828fc4168fc96ad383d7a7b087a8db27ab7939bf6d3745cccc670fc